# nucleus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  env.example  pyproject.toml  requirements.txt
.cursor/rules/: 00_nucleus_global.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai/: README.md  memory.md
ai/plans/: PLAN-0001-desktop-dsl.yml
ai/prompts/: framework_system.md  intake_system.md  plugin_system.md  studio_system.md
ai/runs/: RUN-0001.json
ai/scripts/: plan_to_tasks.py  sanitize_hint.md  spec_to_plan.py  status_build.py  sync_cursor_transcripts.py  transcript_to_memory_stub.py  validate.py
ai/status/: board.yml  metrics.json  milestones.yml
ai/tasks/: TASK-0001.yml  TASK-0002.yml  index.yml
apps/: README.md
contracts/: __init__.py
demo/: desktop_rules.generated.yml  desktop_rules.yml
nucleus/: bootstrap_tools.py  contract_checks.py  contract_store.py  http_api.py  resources.py
nucleus/cli/: memory_stub.py  nuc.py
nucleus/core/: __init__.py  errors.py  executor.py  intent_router.py  kernel.py  permission_guard.py  planner.py  policy_engine.py  runtime_context.py  scope.py
nucleus/intake/: __init__.py  _json_extract.py  anthropic_messages.py  google_gemini.py  openai_responses.py  provider_loading.py  providers.py  testing.py  triage.py
nucleus/plugins/: __init__.py
nucleus/registry/: __init__.py  plugin_registry.py  tool_registry.py
scripts/: check_change_policy.py  check_contracts.py
specs/: INDEX.md
tests/: __init__.py
tools/: __init__.py
ui_adapters/: README.md
(+72 files in other folders)
